All working before fb login

--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--Start-->
         <scene sceneID="GPC-f2-jzn">
             <objects>
-                <viewController title="Start" id="aea-Hc-XXF" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="startPage" title="Start" id="aea-Hc-XXF" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iqL-eS-cRh"/>
                         <viewControllerLayoutGuide type="bottom" id="sIA-o1-TH8"/>
@@ -80,7 +80,7 @@
         <!--Login-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="Login" id="BYZ-38-t0r" customClass="ViewController" customModule="SimpleApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Login" id="BYZ-38-t0r" customClass="ViewController" customModule="Wanna_Help" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -241,7 +241,7 @@
         <!--Sign Up-->
         <scene sceneID="04H-1x-Mbq">
             <objects>
-                <viewController title="Sign Up" id="DNT-oF-sep" customClass="SignUpViewController" customModule="SimpleApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Sign Up" id="DNT-oF-sep" customClass="SignUpViewController" customModule="Wanna_Help" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="acV-eF-vUf"/>
                         <viewControllerLayoutGuide type="bottom" id="B3G-5M-r8r"/>
@@ -444,7 +444,7 @@
         <!--Wanna Help?-->
         <scene sceneID="rWF-6F-J2K">
             <objects>
-                <tableViewController id="i1D-Sd-Pla" customClass="HomeTableViewController" customModule="SimpleApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="i1D-Sd-Pla" customClass="HomeTableViewController" customModule="Wanna_Help" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ak4-Ft-FpH">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -494,7 +494,7 @@
         <!--Request-->
         <scene sceneID="9ZB-fH-Y5i">
             <objects>
-                <viewController id="ahG-z7-Thp" customClass="RequestViewController" customModule="SimpleApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ahG-z7-Thp" customClass="RequestViewController" customModule="Wanna_Help" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="s9K-C5-RbR"/>
                         <viewControllerLayoutGuide type="bottom" id="oAu-8C-H5p"/>
@@ -575,7 +575,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="EpN-fJ-7f6">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="maK-rD-6h8" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarController" automaticallyAdjustsScrollViewInsets="NO" id="maK-rD-6h8" sceneMemberID="viewController">
                     <toolbarItems/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="MKw-cC-FfS">
